<resources>
    <string name="app_name">Russian politics quiz</string>
    <string name="btn_true">TRUE</string>
    <string name="btn_false">FALSE</string>
    <string name="correct_toast">Correct!1!11</string>
    <string name="incorrect_toast">Nooooooo(9(99</string>
    <string name="btn_next">NEXT</string>
    <string name="question_1">Vladimir Putin was the Russian president in 2000</string>
    <string name="question_2">Victor Chernomirdin had been the russian president just for 1 day</string>
    <string name="question_3">In 2018\'s president elections Alexey Navalniy became the president of Russia</string>
    <string name="question_4">After the final results of 2018\'s president elections
        popular candidate - Pavel Grudinin refused to shave off his gorgeous moustache as he would promise if he loosed
    </string>
    <string name="question_5">Nowadays Vladimir Putin has special man who will collect and take
    president\'s guano if Putin decides to use the toilet</string>
    <string name="btn_prev">PREV</string>
    <string name="prev_btn_CD">Go to previous question</string>
    <string name="next_btn_CD">Go to the next question</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
</resources>