<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/question_1"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center" >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_true"
            android:id="@+id/btn_true"/>

        <Button
            android:id="@+id/btn_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_false"
            android:layout_marginStart="20dp" />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/btn_cheat"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"
        android:layout_gravity="center" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCheatCount"
        tools:text="3 cheats left"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="#FF00FF"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_prev"
            android:src="@drawable/arrow_left"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/prev_btn_CD"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right"
            android:id="@+id/btn_next"
            android:contentDescription="@string/next_btn_CD" />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvApiLevel"
        tools:text="API level"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textColor="@color/material_dynamic_neutral50" />

</LinearLayout>
